source3/locking/share_mode_lock.c
@@ -487,6 +487,7 @@ static int traverse_fn(struct db_record *rec, void *_state)
 		return 0;
 	}
 	for (i=0; i<d->num_share_modes; i++) {
+		d->share_modes[i].stale = false; /* [skip] in idl */
 		state->fn(&d->share_modes[i],
 			  d->servicepath, d->base_name,
 			  state->private_data);
